# personel

./: .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent-msi.yml  ci.yml  security.yml
.zap/: rules.tsv
apps/agent/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
apps/agent/crates/personel-agent/: Cargo.toml  build.rs
apps/agent/crates/personel-agent/src/: anti_tamper.rs  config.rs  crash_dump.rs  health_pipe.rs  main.rs  runtime.rs  service.rs  throttle.rs
apps/agent/crates/personel-collectors/: Cargo.toml
apps/agent/crates/personel-collectors/src/: bluetooth_devices.rs  browser_history.rs  clipboard.rs  clipboard_content_redacted.rs  cloud_storage.rs  device_status.rs  email_metadata.rs  file_system.rs  firefox_history.rs  geo_ip.rs  idle.rs  keystroke.rs  lib.rs  mtp_devices.rs  network.rs  office_activity.rs  print.rs  process_app.rs  screen.rs  system_events.rs  tests_logic.rs  usb.rs  user_sid.rs  window_title.rs  window_url_extraction.rs
apps/agent/crates/personel-core/: Cargo.toml
apps/agent/crates/personel-core/src/: clock.rs  error.rs  event.rs  ids.rs  lib.rs  throttle.rs  user_context.rs
apps/agent/crates/personel-crypto/: Cargo.toml
apps/agent/crates/personel-crypto/src/: enroll.rs  envelope.rs  keystore.rs  lib.rs
apps/agent/crates/personel-livestream/: Cargo.toml
apps/agent/crates/personel-livestream/src/: lib.rs
apps/agent/crates/personel-os/: Cargo.toml
apps/agent/crates/personel-os-linux/: Cargo.toml  README.md  build.rs
apps/agent/crates/personel-os-linux/bpf/: README.md
apps/agent/crates/personel-os-linux/src/: capture.rs  file_events.rs  input.rs  keystore.rs  lib.rs  systemd.rs  window_title.rs
apps/agent/crates/personel-os-linux/src/ebpf/: mod.rs  network.rs  process.rs
apps/agent/crates/personel-os-linux/src/stub/: mod.rs
apps/agent/crates/personel-os-linux/tests/: smoke.rs
apps/agent/crates/personel-os-macos/: Cargo.toml  README.md  build.rs
apps/agent/crates/personel-os-macos/src/: capture.rs  es_bridge.rs  file_events.rs  input.rs  keystore.rs  lib.rs  network_extension.rs  service.rs  tcc.rs
apps/agent/crates/personel-os-macos/src/stub/: mod.rs
apps/agent/crates/personel-os-macos/swift/: README.md
apps/agent/crates/personel-os-macos/tests/: smoke.rs
apps/agent/crates/personel-os/src/: lib.rs
apps/agent/crates/personel-os/src/stub/: mod.rs
apps/agent/crates/personel-os/src/windows/: anti_tamper.rs  capture.rs  dpapi.rs  etw.rs  input.rs  mod.rs  service.rs
apps/agent/crates/personel-platform/: Cargo.toml
apps/agent/crates/personel-platform/src/: lib.rs
apps/agent/crates/personel-policy/: Cargo.toml
apps/agent/crates/personel-policy/src/: engine.rs  lib.rs
apps/agent/crates/personel-proto/: Cargo.toml  build.rs
apps/agent/crates/personel-proto/src/: lib.rs
apps/agent/crates/personel-queue/: Cargo.toml
apps/agent/crates/personel-queue/src/: lib.rs  queue.rs  schema.rs
apps/agent/crates/personel-tests/: Cargo.toml
apps/agent/crates/personel-tests/src/: lib.rs
apps/agent/crates/personel-tests/tests/: smoke.rs
apps/agent/crates/personel-transport/: Cargo.toml
apps/agent/crates/personel-transport/src/: client.rs  envelope.rs  lib.rs  tls.rs
apps/agent/crates/personel-updater/: Cargo.toml
apps/agent/crates/personel-updater/src/: apply.rs  lib.rs  manifest.rs  package.rs  swap.rs  version_checker.rs
apps/agent/crates/personel-watchdog/: Cargo.toml
apps/agent/crates/personel-watchdog/src/: health_monitor.rs  ipc.rs  main.rs  uninstall_protect.rs
apps/agent/installer/: README.md  build-msi.ps1  setup-build-env.ps1  sign-binaries.ps1
apps/agent/installer/admx/: personel-agent.admx
apps/agent/installer/admx/en-US/: personel-agent.adml
apps/agent/installer/admx/tr-TR/: personel-agent.adml
apps/agent/installer/wix/: main.wxs  variables.wxi
apps/api/: Dockerfile  Makefile  go.mod  go.sum
apps/console/: .env.example  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/gateway/: Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
apps/livrec-service/: Dockerfile  README.md  go.mod  go.sum  openapi.yaml
apps/ml-classifier/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
apps/mobile-admin/: .env.example  README.md  app.config.ts  eas.json  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/ocr-service/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
apps/ocr-service/bench/: README.md
apps/ocr-service/lang/: README.md
apps/ocr-service/src/personel_ocr/: __init__.py  canonical.py  canonical_adapter.py  config.py  logging.py  main.py  metrics.py  pipeline.py  postprocess.py  preprocess.py  redaction.py  routes.py  schemas.py
apps/ocr-service/src/personel_ocr/engines/: base.py  paddle.py  tesseract.py
apps/ocr-service/tests/: conftest.py  test_preprocess.py  test_redaction.py  test_routes.py
apps/portal/: .env.example  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/qa/: Makefile  go.mod  go.sum
apps/uba-detector/: Dockerfile  README.md  pyproject.toml
apps/uba-detector/materialized_views/: README.md  user_app_diversity.sql  user_data_egress.sql  user_hourly_activity.sql  user_off_hours_ratio.sql  user_policy_violations.sql
apps/uba-detector/migrations/: 0001_uba_materialized_views.sql
apps/uba-detector/src/personel_uba/: __init__.py  clickhouse.py  clickhouse_extractor.py  config.py  features.py  logging.py  main.py  metrics.py  model.py  routes.py  schemas.py  scoring.py  tiers.py
apps/uba-detector/tests/: conftest.py  test_clickhouse_extractor.py  test_features.py  test_routes.py  test_scoring.py
apps/uba-detector/tests/fixtures/: synthetic_events.csv
docs/: README.md  api-examples.md
docs/architecture/: mtls-pki.md  (+23 more)
infra/: README.md  backup.sh  install.sh  restore.sh  uninstall.sh  upgrade.sh
(+1124 files in other folders)
