[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personel-uba"
version = "0.1.0"
description = "UBA / Insider Threat Anomaly Detection Service — Personel Platform Phase 2.6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "clickhouse-connect>=0.8.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
personel-uba = "personel_uba.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/personel_uba"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (selected rules)
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "ANN101", # missing self annotation
    "ANN102", # missing cls annotation
    "S101",   # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/personel_uba --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/personel_uba"]
omit = ["*/tests/*"]
