[package]
name    = "personel-collectors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
personel-core   = { path = "../personel-core" }
personel-proto  = { path = "../personel-proto" }
personel-policy = { path = "../personel-policy" }
personel-crypto = { path = "../personel-crypto" }
personel-queue  = { path = "../personel-queue" }
personel-os     = { path = "../personel-os" }

tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
zeroize      = { workspace = true }
