[package]
name    = "personel-collectors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
personel-core     = { path = "../personel-core" }
personel-proto    = { path = "../personel-proto" }
personel-policy   = { path = "../personel-policy" }
personel-crypto   = { path = "../personel-crypto" }
personel-queue    = { path = "../personel-queue" }
# Phase 2.2 facade: cross-platform OS access via compile-time dispatch.
personel-platform = { path = "../personel-platform" }

tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
zeroize      = { workspace = true }
sysinfo      = { workspace = true }
hex          = { workspace = true }
serde_json   = { workspace = true }
# Phase 2 Wave 2: Chromium/Firefox SQLite history readers. Reuses the same
# rusqlite version pinned by personel-queue (bundled-sqlcipher feature there;
# here we only need the standard bundled SQLite for read-only history DB
# access — sqlcipher is a superset and remains compatible).
rusqlite     = { workspace = true }
# Phase 2 Wave 3 #18: MaxMind GeoLite2 local database reader for the geo_ip
# collector. Pure-Rust crate, no external runtime deps; the GeoLite2 mmdb
# file itself is NOT shipped (MaxMind license requires the customer admin to
# download it). Pinned to 0.24 — stable, well-established, matches the API
# shape used in geo_ip.rs (Reader::open_readfile + lookup::<Country>).
maxminddb    = "0.24"

# Windows-only dep: collectors that still call Windows-specific personel-os
# modules (ETW, WFP, DXGI) not yet lifted into the facade. Those modules
# are gated with #[cfg(target_os = "windows")] at the source level.
[target.'cfg(target_os = "windows")'.dependencies]
personel-os  = { path = "../personel-os" }
windows      = { workspace = true }
sha2         = { workspace = true }

[dev-dependencies]
# sha2 used in tests_logic.rs for USB device path hash tests (all platforms).
sha2         = { workspace = true }
serde_json   = { workspace = true }
