[package]
name    = "personel-livestream"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
personel-core  = { path = "../personel-core" }
personel-proto = { path = "../personel-proto" }

tokio          = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
