[package]
name    = "personel-policy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
personel-core  = { path = "../personel-core" }
personel-proto = { path = "../personel-proto" }

thiserror     = { workspace = true }
tracing       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
ed25519-dalek = { workspace = true }
bytes         = { workspace = true }
prost         = { workspace = true }
