[package]
name    = "personel-queue"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
personel-core  = { path = "../personel-core", features = ["rusqlite"] }

rusqlite       = { workspace = true }
r2d2           = { workspace = true }
r2d2_sqlite    = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
bytes          = { workspace = true }
hex            = { workspace = true }
zeroize        = { workspace = true }
