[package]
name    = "personel-transport"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
personel-core    = { path = "../personel-core" }
personel-proto   = { path = "../personel-proto" }
personel-queue   = { path = "../personel-queue" }
# Faz 4 #30 — OTA apply wire-in. handle_server_message dispatches
# UpdateNotify into personel_updater::{verify_update_package, apply_update}.
personel-updater = { path = "../personel-updater" }

tokio         = { workspace = true }
tonic         = { workspace = true }
tower         = { workspace = true }
rustls        = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots  = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
bytes         = { workspace = true }
prost         = { workspace = true }
futures       = { workspace = true }
tokio-stream  = { workspace = true }
prost-types   = { workspace = true }
rand          = { workspace = true }
flate2        = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
x509-parser   = { workspace = true }
