[package]
name    = "personel-updater"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
personel-core = { path = "../personel-core" }

thiserror      = { workspace = true }
tracing        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
prost          = { workspace = true }
sha2           = { workspace = true }
ed25519-dalek  = { workspace = true }
tokio          = { workspace = true }
reqwest        = { workspace = true }
bytes          = { workspace = true }
hex            = { workspace = true }

[dev-dependencies]
rand           = { workspace = true }
